Tweet and thread fetch endpoints added